<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddChoreFragment">
    <!-- Button to Save chore -->
    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fitsSystemWindows="true"
        android:focusable="false"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- ScrollView to manage lots of Subtasks -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/editChoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <!-- Add Delete button at top right -->
            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:fitsSystemWindows="true"
                android:focusable="false"
                android:text="@string/delete" />
        <!-- Inout field for Chore Title -->
        <EditText
            android:id="@+id/choreTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/chore_title"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <!-- For adding new Subtasks to this task -->
            <ImageButton
                android:id="@+id/button_newSubtask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@android:drawable/ic_menu_add"
                android:backgroundTint="@color/purple_700"
                android:focusable="false"
                android:contentDescription="@string/new_subtask" />
            <!-- Subtask header -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/subtasks"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <!-- Subtask input fields are added dynamically by EditChoreFragment.java -->
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>