<?xml version="1.0" encoding="utf-8"?>
<!-- Define fragment layout for adding a new chore -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddChoreFragment">
    <!-- Add submit button -->
    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fitsSystemWindows="true"
        android:focusable="false"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Wrap in Scroll View to manage lots of Subtasks -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <!-- ScrollView can only contain one child element.
        So wrap all the children in a vertical LinearLayout -->
    <LinearLayout
        android:id="@+id/addChoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- EditText field for Chore Title -->
        <EditText
            android:id="@+id/choreTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/chore_title"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            />

        <!-- Horizontal Layout for Subtask header and button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <!-- Button for adding new Subtask Inout field -->
            <ImageButton
                android:id="@+id/button_newSubtask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@android:drawable/ic_menu_add"
                android:backgroundTint="@color/purple_700"
                android:focusable="false"
                android:contentDescription="@string/new_subtask"
                />
            <!-- Subtask header -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/add_subtask"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <!-- Subtask input fields are added dynamically by AddChoreFragment.java -->
        </LinearLayout>

    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>